crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@if-then-else.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/if-then-else.input
---
Input: if f then g else h

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: IfThenElseExpression }
        Token { kind: IfKw }
        Start { kind: ExpressionOperatorChain }
          Start { kind: ExpressionInfixChain }
            Start { kind: ApplicationExpression }
              Start { kind: VariableExpression }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Start { kind: OneOrMore }
            Finish
          Finish
          Start { kind: OneOrMore }
          Finish
        Finish
        Token { kind: ThenKw }
        Start { kind: ExpressionOperatorChain }
          Start { kind: ExpressionInfixChain }
            Start { kind: ApplicationExpression }
              Start { kind: VariableExpression }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Start { kind: OneOrMore }
            Finish
          Finish
          Start { kind: OneOrMore }
          Finish
        Finish
        Token { kind: ElseKw }
        Start { kind: ExpressionOperatorChain }
          Start { kind: ExpressionInfixChain }
            Start { kind: ApplicationExpression }
              Start { kind: VariableExpression }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Start { kind: OneOrMore }
            Finish
          Finish
          Start { kind: OneOrMore }
          Finish
        Finish
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
